modified:   app/app.iml 	modified:   app/build.gradle 	modified:   app/src/main/AndroidManifest.xml 	new file:   app/src/main/Thumbs.db 	new file:   app/src/main/ic_launcher-web.png 	new file:   app/src/main/java/com/example/vipul/splash/DrawerAdapter.java 	modified:   app/src/main/java/com/example/vipul/splash/MainActivity.java 	modified:   app/src/main/java/com/example/vipul/splash/friend_list.java 	new file:   app/src/main/java/com/example/vipul/splash/item_row.java 	new file:   app/src/main/res/drawable/Thumbs.db 	new file:   app/src/main/res/drawable/background.jpg 	new file:   app/src/main/res/drawable/ic_action.png 	new file:   app/src/main/res/drawable/logo1.png 	modified:   app/src/main/res/layout/activity_friend_list.xml 	new file:   app/src/main/res/layout/activity_item_row.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,11 @@
     <string name="title_activity_dispatch">dispatch</string>
     <string name="title_activity_friend_list">friend_list</string>
     <string name="title_activity_chat_item">chat_item</string>
+    <string name="title_activity_item_row">item_row</string>
+    <string name="title_activity_header">header</string>
+    <string name="title_activity_tool_bar">Tool_bar</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="title_activity_main_activity2">MainActivity2Activity</string>
+    <string name="title_activity_drawer_header">drawerheader</string>
 </resources>
