modified:   app/src/main/AndroidManifest.xml 	new file:   app/src/main/java/com/example/vipul/splash/EventPage.java 	new file:   app/src/main/res/layout/activity_event_page.xml 	new file:   app/src/main/res/menu/menu_event_page.xml 	modified:   app/src/main/res/values/strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="title_activity_main_activity2">MainActivity2Activity</string>
     <string name="title_activity_drawer_header">drawerheader</string>
+    <string name="title_activity_event_page">EventPage</string>
 </resources>
