modified:   app/src/main/AndroidManifest.xml 	modified:   app/src/main/java/com/example/vipul/splash/DrawerAdapter.java 	new file:   app/src/main/java/com/example/vipul/splash/EventDetails.java 	modified:   app/src/main/java/com/example/vipul/splash/EventPage.java 	new file:   app/src/main/java/com/example/vipul/splash/EventView.java 	modified:   app/src/main/java/com/example/vipul/splash/MainActivity.java 	new file:   app/src/main/java/com/example/vipul/splash/MapMe.java 	modified:   app/src/main/java/com/example/vipul/splash/friend_list.java 	modified:   app/src/main/res/layout/activity_chat_item.xml 	new file:   app/src/main/res/layout/activity_event_details.xml 	modified:   app/src/main/res/layout/activity_event_page.xml 	new file:   app/src/main/res/layout/activity_event_view.xml 	modified:   app/src/main/res/layout/activity_friend_list.xml 	new file:   app/src/main/res/layout/activity_map_me.xml 	new file:   app/src/main/res/menu/menu_event_details.xml 	new file:   app/src/main/res/menu/menu_event_view.xml 	new file:   app/src/main/res/menu/menu_map_me.xml 	modified:   app/src/main/res/values/colors.xml 	modified:   app/src/main/res/values/strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="title_activity_main_activity2">MainActivity2Activity</string>
     <string name="title_activity_drawer_header">drawerheader</string>
     <string name="title_activity_event_page">EventPage</string>
+    <string name="title_activity_map_me">MapMe</string>
+    <string name="title_activity_event_view">EventView</string>
+    <string name="title_activity_event_details">EventDetails</string>
 </resources>
