modified:   app/src/main/AndroidManifest.xml 	new file:   app/src/main/assets/fontawesome-webfont.ttf 	modified:   app/src/main/java/com/example/vipul/splash/EventDetails.java 	modified:   app/src/main/java/com/example/vipul/splash/EventPage.java 	new file:   app/src/main/java/com/example/vipul/splash/addmem.java 	new file:   app/src/main/res/layout/activity_addmem.xml 	modified:   app/src/main/res/layout/activity_event_page.xml 	modified:   app/src/main/res/layout/activity_item_row.xml 	new file:   app/src/main/res/layout/member_list.xml 	new file:   app/src/main/res/menu/menu_addmem.xml 	modified:   app/src/main/res/menu/menu_event_details.xml 	new file:   app/src/main/res/menu/selected_item.xml 	modified:   app/src/main/res/values/strings.xml 	modified:   app/src/main/res/values/styles.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="title_activity_map_me">MapMe</string>
     <string name="title_activity_event_view">EventView</string>
     <string name="title_activity_event_details">EventDetails</string>
+    <string name="title_activity_addmem">addmem</string>
 </resources>
