--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,13 @@
     <string name="title_activity_event_view">EventView</string>
     <string name="title_activity_event_details">EventDetails</string>
     <string name="title_activity_addmem">addmem</string>
+    <string name="title_activity_slider">slider</string>
+    <string name="action_hide">Hide Panel</string>
+    <string name="action_show">Show Panel</string>
+    <string name="action_anchor_enable">Enable Anchor Point</string>
+    <string name="action_anchor_disable">Disable Anchor Point</string>
+    <string name="hello"><![CDATA[<b>The Awesome Sliding Up Panel</b><br/> Brought to you by<br/><a href="http://umanoapp.com">http://umanoapp.com</a>]]></string>
+    <string name="follow"><![CDATA[Follow us<br/>on <a href="http://twitter.com/umanoapp">Twitter</a>]]></string>
+    <string name="title_activity_invites">Invites</string>
+    <string name="title_activity_get_directions">GetDirections</string>
 </resources>
